[package]
name = "bpr"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "CLI tool for tracking file reading progress"

repository = "https://github.com/skemez/bpr"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
lopdf = "0.36.0"
regex = "1.11.1"
sqlite = "0.37.0"
